--- a/src/view/dashboars/dashboarsmedicamento.html
+++ b/src/view/dashboars/dashboarsmedicamento.html
@@ -28,7 +28,7 @@
                 <div class="col">
                     <div class="card border-primary shadow-sm">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Total de Medicamentos</h5>
+                            <h5 class="card-title">Total de Medicamentos registrados</h5>
                             <p class="card-text fs-2 fw-bold">19,655</p>
                         </div>
                     </div>
